--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "ionic-angular": "^2.0.1-201702161925",
     "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
-    "jQuery": "^1.7.4",
+    "jquery": "^3.0.0",
     "moment": "^2.17.1",
     "ng2-filter-pipe": "^0.1.6",
     "rxjs": "5.0.0-beta.12",
