--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,8 @@
 {
-  "name": "ionic2-app-base",
+  "name": "tienda-eyc",
   "app_id": "cb9649e2",
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+  "integrations": {
+    "cordova": {}
+  }
 }
