--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
         "@ionic-native/status-bar": "3.7.0",
         "@ionic/storage": "2.0.1",
         "angular2-moment": "^1.3.3",
-        "cordova-android": "^6.2.3",
-        "cordova-plugin-console": "^1.0.5",
-        "cordova-plugin-device": "^1.1.4",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-statusbar": "^2.2.1",
-        "cordova-plugin-whitelist": "^1.3.1",
-        "cordova-sqlite-storage": "~2.0.4",
+        "cordova-android": "6.4.0",
+        "cordova-plugin-console": "^1.1.0",
+        "cordova-plugin-device": "^1.1.7",
+        "cordova-plugin-splashscreen": "^4.1.0",
+        "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-sqlite-storage": "^2.0.4",
         "ionic-angular": "3.2.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -42,8 +42,6 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
-        "@ionic/cli-plugin-cordova": "1.4.0",
-        "@ionic/cli-plugin-ionic-angular": "1.1.2",
         "typescript": "2.2.1"
     },
     "cordova": {
